# roofArea

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_logs_test.txt  docker-compose.yml  entrypoint.sh  project-1-at-2026-02-25-00-35-7a9fdfa6.json  pyproject.toml  requirements.txt  run_pretrain_finetune.ps1  run_train.bat  run_train.ps1  run_train_label_studio.ps1  test_api.ps1  test_api_10.ps1
alembic/: env.py
dados/: project-1-at-2026-02-19-00-25-bf5f8422.json  project-1-at-2026-02-21-01-02-fed56fdb.json
docs/: ESTRATEGIA_TREINO.md  ESTRUTURA_ROOF_E_DOIS_MODELOS.md  TREINO_LINHAS_NPZ.md  api-exemplo.md  arquitetura-producao.md  arquitetura.md  chips-segmentos-finetuning.md  dataset-airs-kaggle.md  docker.md  env-requisitos.md  especificacao.md  fallback-lidar.md  label-studio-treino.md  melhorar-mascaras-e-aguas.md  onde-obter-recursos.md  performance.md  pipeline.md  roofsense-integracao.md  segmentacao-deeplabv3.md  treino-unet.md
lidar/: MDS-50cm-108201-07-2024_v01.tif.aux.xml  MDS-50cm-110207-07-2024_v01.tif.aux.xml  MDS-50cm-110208-07-2024_v01.tif.aux.xml  MDS-50cm-110209-07-2024_v01.tif.aux.xml  MDS-50cm-110210-07-2024_v01.tif.aux.xml  MDS-50cm-110211-07-2024_v01.tif.aux.xml  MDS-50cm-111201-07-2024_v01.tif.aux.xml  MDS-50cm-111202-07-2024_v01.tif.aux.xml  MDS-50cm-111203-07-2024_v01.tif.aux.xml  MDS-50cm-111205-07-2024_v01.tif.aux.xml  MDS-50cm-111206-07-2024_v01.tif.aux.xml  MDS-50cm-111207-07-2024_v01.tif.aux.xml  MDS-50cm-111208-07-2024_v01.tif.aux.xml  MDS-50cm-111209-07-2024_v01.tif.aux.xml  MDS-50cm-111210-07-2024_v01.tif.aux.xml  (+44 more)
(+617 files in other folders)
